--- a/public/test/index.html
+++ b/public/test/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<div id="header">
+	<!-- <div id="header">
         <div id="header-logo">
             <a href="/">
                 <image src="../images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" />
@@ -58,7 +58,7 @@
             
             <button class="signup-btn">Sign Up</button>
         </form>
-    </section> 
+    </section>  -->
 </body>
 
 </html>
