--- a/public/test/index.html
+++ b/public/test/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<div id="header">
+	<div class="header">
         <div id="header-logo">
             <a href="/">
                 <image src="../images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" />
@@ -20,14 +20,23 @@
     </div>
 
 <!-- DECK EDIT -->
-    <section class="edit-screen">
+    <!-- <section class="edit-screen">
         <div>
-            <h2>Game:</h2>
-            <!-- handlebars tag for game logo deck is already built with -->
+            Deck Name: {{cards.0.deck.deck_name}}
+            
         </div>
+    
+        {{#each cards as |card|}}
+            <div>
+                {{>card-info card}}
+            </div>
+        {{/each}}
 
         <div>
-            {{deck_name}}
+            <label>Card Search:</label>
+            <input name="card-name"/>
+            <button>Enter</button>
+            <h4>Type a word, phrase, or full card name and hit enter to search</h4>
         </div>
 
         <div>
@@ -37,13 +46,14 @@
             <button>Enter</button>
         </div>
 
+
         <div>
             <h2>Decklist:</h2>
             <textarea name="decklist" class="decklist-box"></textarea>
         </div>
 
         <button>Edit Deck</button>
-    </section>
+    </section> -->
 
 
 <!-- DECK COLLECTION HANDLEBARS -->
